# physics-in-python

./: README.md  pyproject.toml  requirements.txt  run_ball_on_spring.sh  run_demo.sh  run_earth_moon_orbit.sh  run_elastic_collision.sh  run_falling_chain.sh  run_glowscript.sh  run_sprinkler.sh  run_tests.sh  run_trinket.sh  run_watch.sh
.github/workflows/: python-app.yml
docs/: _config.yml  geometry.md  index.md  probeer.html
docs/_layouts/: default.html
docs/glowscript/: 3dplots.html  Complexfunctionplot.html  GeometricShapes.html  NumpyMatplot3D.html
html/: dynamic_3d_plots.html  keplers_law.html
src/: 3d_plot.py  README.md  ball.py  ball_falling_on_spring.py  celestial_object.py  chain_from_table.py  earth_moon_orbit.py  elastic_collision.py  spring.py  sprinkler.py
src/astrophysics/: coriolis_force_on_eros.py  earth_moon_orbit.py  keplers_law.py  three_body_problem.py
src/demos/: 2D_kinematics.py  README.md  ball_falling_on_spring.py  ball_hanging_on_spring.py  ball_on_sliding_ramp.py  block_rotation.py  boucing_ball.py  bouncing_ball.py  coriolis_force_on_eros.py  crystal_symmetry_planes.py  dipole.py  doppler_effect.py  earth_moon_orbit.py  elastic_collision.py  electromagnetic_wave.py  electron_around_ring.py  em_wave.py  faradays_law.py  galilean_space_time.py  galileo_space_time.py  hard_sphere_gas.py  harmonic_oscillator.py  ising_spin.py  ising_sping.py  keplers_law.py  (+15 more)
test/: ball_test.py  building_test.py  charged_ring_test.py  physics_demo_test.py  spring_test.py
vpython/: adiabatic_expansion_2.py  chaos_game.py  effusion.py  molecule.html
(+216 files in other folders)
