[tool.poetry]
name = "Physics in Python"
version = "0.1.0"
description = "Physics demos with VPython"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"

pytest-watch = "^4.2.0"
pytest = "^8.3.4"
pyhamcrest = "^2.1.0"
vpython = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
